crates/keron-lang/tests/corpus/errors/parse/struct_decl_missing_field_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found '}' expected something else, '#', or ':'
  --> 1:26
  |
1 | struct Point { x: Int, y }
  |                          ^
